Add json file and new Cost Widget, edit dependence and Fonts file.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   gradient_widgets:
   firebase_auth:
   firebase_database:
+  groovin_material_icons:
+  numberpicker:
 
   flutter:
     sdk: flutter
@@ -45,6 +47,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
+    - assets/item.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
